# django-audimatic

./: .behaverc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  generate_requirements.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
django_audimatic/: admin.py  apps.py  models.py
django_audimatic/acceptance/features/: admin_model.feature  system_checks.feature
django_audimatic/acceptance/steps/: __init__.py  then.py
django_audimatic/migrations/: 0001_initial.py
django_audimatic_test/: asgi.py  settings.py  urls.py  wsgi.py
testapp/: admin.py  models.py
testapp/migrations/: 0001_initial.py
