[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-audimatic"
version = "0.1.1"
authors = [
  { name="Bill Schumacher", email="34168009+BillSchumacher@users.noreply.github.com" },
]
description = "Model audit trails"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "django"
]

[project.urls]
"Homepage" = "https://github.com/BillSchumacher/django-audimatic"
"Bug Tracker" = "https://github.com/BillSchumacher/django-audimatic/issues"


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"