[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-audimatic"
version = "0.2.3"
authors = [
  { name="Bill Schumacher", email="34168009+BillSchumacher@users.noreply.github.com" },
]
description = "Model audit trails"
readme = "README.md"
license='MIT'
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Database",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "django",
  "django-nonrelated-inlines",
  "django-pgtrigger",
  "psycopg2"
]

[project.urls]
"Homepage" = "https://github.com/BillSchumacher/django-audimatic"
"Bug Tracker" = "https://github.com/BillSchumacher/django-audimatic/issues"


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.hatch.build]
include = [
  "django_audimatic/**/*.py",
]
exclude = ["testapp*", "tests*", "django_auditmatic_test*"]